--- a/mainstyle.css
+++ b/mainstyle.css
@@ -2,6 +2,7 @@
 *  {
     margin: 0;
     padding: 0;
+    font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
 }
 
 /* navbar styling */
@@ -63,6 +64,28 @@ body {
 body p,a,h1,h2,h3,h4,h5,h6 {
   color: whitesmoke;
   padding: 16px 0px 8px 16px;
+}
+/* title font icing for headers */
+body h1, h2, h3, h4, h5, h6 {
+  font-family: 'Press Start 2P', cursive;
+  /* text shadow; syntax: 1st font, 2nd font, blur, color */
+  text-shadow: 5px, 5px;
+}
+
+/* Animation */
+div.animation {
+  width: 300px;
+  height: 200px;
+  background-color: green;
+  animation-name: color-change;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes color-change {
+  from {background-color: green;}
+  to {background-color: purple;}
 }
 
 /* Footer styling */
