Fixed text shadow issue! I am finished for now!

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -70,7 +70,7 @@ body p,a,h1,h2,h3,h4,h5,h6 {
 body h1, h2, h3, h4, h5, h6 {
   font-family: 'Press Start 2P', cursive;
   /* text shadow; syntax: 1st font, 2nd font, blur, color */
-  text-shadow: 5px, 5px;
+  text-shadow: 5px 5px 2px #34aa2f;
 }
 
 /* Hover effect over links */
